@@ -4,7 +4,10 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -18,13 +21,20 @@ import java.util.Optional;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
+
+import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
+
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
 import school.faang.user_service.dto.goal.GoalDto;
 import school.faang.user_service.dto.goal.GoalFilterDto;
@@ -36,30 +46,66 @@ import school.faang.user_service.mapper.GoalMapper;
 import school.faang.user_service.repository.SkillRepository;
 import school.faang.user_service.repository.goal.GoalRepository;
 import school.faang.user_service.validation.GoalValidator;
+import school.faang.user_service.entity.User;
+import school.faang.user_service.entity.goal.Goal;
+import school.faang.user_service.mapper.GoalMapper;
+import school.faang.user_service.repository.SkillRepository;
+import school.faang.user_service.repository.goal.GoalRepository;
+import school.faang.user_service.service.goal.filters.TitleGoalFilter;
+import school.faang.user_service.validation.GoalValidator;
+
+import java.util.Collections;
+
+import static org.junit.jupiter.api.Assertions.*;
 
 @ExtendWith(MockitoExtension.class)
-class GoalServiceTest {
+@MockitoSettings(strictness = Strictness.LENIENT)
+public class GoalServiceTest {
     @InjectMocks
     private GoalService goalService;
 
     @Mock
     private GoalRepository goalRepository;
-    private GoalFilter filter1;
-    private GoalFilter filter2;
-    @Mock
+
+    @Spy
     private GoalMapper goalMapper;
-    @Mock
-    private SkillRepository skillRepository;
+
+    private List<GoalFilter> goalFilters;
 
     @Mock
     private GoalValidator goalValidator;
+    private List<Goal> mockSubtasks;
+    private List<GoalDto> mockDtoList;
+    private GoalFilter filter1;
+    private GoalFilter filter2;
 
     @BeforeEach
-    void setUp() {
+    public void setUp() {
+        mockSubtasks = new ArrayList<>();
+        Goal subtask1 = new Goal();
+        subtask1.setId(1L);
+        subtask1.setTitle("Subtask 1");
+        Goal subtask2 = new Goal();
+        subtask2.setId(2L);
+        subtask2.setTitle("Subtask 2");
+        mockSubtasks.add(subtask1);
+        mockSubtasks.add(subtask2);
+
+        mockDtoList = new ArrayList<>();
+        GoalDto dto1 = new GoalDto();
+        dto1.setId(1L);
+        dto1.setTitle("Subtask 1");
+        GoalDto dto2 = new GoalDto();
+        dto2.setId(2L);
+        dto2.setTitle("Subtask 2");
+        mockDtoList.add(dto1);
+        mockDtoList.add(dto2);
+
         filter1 = mock(GoalFilter.class);
         filter2 = mock(GoalFilter.class);
-        MockitoAnnotations.initMocks(this);
-        goalService = new GoalService(goalRepository, goalMapper, new ArrayList<>(),skillRepository,goalValidator);
+
+        goalService = new GoalService(goalRepository, goalMapper, goalFilters,goalValidator);
+        MockitoAnnotations.openMocks(this);
     }
 
     @Test
@@ -78,19 +124,40 @@ class GoalServiceTest {
     void testGetGoalsByUser_WithNonApplicableGoalFilter() {
         Long userId = 1L;
         GoalFilterDto filters = new GoalFilterDto();
-
         GoalFilter nonApplicableFilter = mock(GoalFilter.class);
         when(nonApplicableFilter.isApplicable(filters)).thenReturn(false);
 
         List<GoalFilter> goalFilters = List.of(nonApplicableFilter);
+
         goalService = new GoalService(goalRepository, goalMapper, goalFilters,skillRepository,goalValidator);
 
         List<Goal> goals = List.of(new Goal(), new Goal());
         when(goalRepository.findAll()).thenReturn(goals);
-
         List<GoalDto> result = goalService.getGoalsByUser(userId, filters);
 
         assertEquals(0, result.size());
+    }
+
+    @Test
+    public void testCreateGoal() {
+        Long userId = 1L;
+        GoalDto mockGoalDto = new GoalDto();
+
+        Goal mockGoal = mock(Goal.class);
+
+        when(mockGoal.getId()).thenReturn(1L);
+        when(mockGoal.getParent()).thenReturn(mock(Goal.class));
+        when(mockGoal.getParent().getId()).thenReturn(2L);
+
+        when(goalMapper.toEntity(any(GoalDto.class))).thenReturn(mockGoal);
+        doNothing().when(goalValidator).validateGoal(anyLong(), any(GoalDto.class));
+        when(goalRepository.save(any(Goal.class))).thenReturn(mockGoal);
+        when(goalMapper.toDto(any(Goal.class))).thenReturn(mockGoalDto);
+
+        GoalDto result = goalService.createGoal(userId, mockGoalDto);
+
+        assertNotNull(result);
+        assertEquals(mockGoalDto, result);
     }
 
     @Test
@@ -104,7 +171,7 @@ class GoalServiceTest {
         List<GoalFilter> goalFilters = List.of(applicableFilter);
         goalService = new GoalService(goalRepository, goalMapper, goalFilters,skillRepository,goalValidator);
 
-        List<Goal> goals = List.of(new Goal(), new Goal());
+        List<Goal> goals = Arrays.asList(new Goal(), new Goal());
         when(goalRepository.findAll()).thenReturn(goals);
 
         GoalDto goalDto1 = new GoalDto();
